After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770091 - [PATCH] Fix memory leaks
[PATCH] Fix memory leaks
Status: RESOLVED FIXED
Product: vino
Classification: Applications
Component: Server
git master
Other Linux
: Normal normal
: ---
Assigned To: Vino Maintainer(s)
Vino Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-08-18 14:05 UTC by Eric R. Schulz
Modified: 2016-08-19 16:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leaks (1.81 KB, patch)
2016-08-18 14:05 UTC, Eric R. Schulz
committed Details | Review

Description Eric R. Schulz 2016-08-18 14:05:54 UTC
Created attachment 333560 [details] [review]
Fix memory leaks

unref builder in server_connected_changed_cb() and free tooltip in
vino_status_icon_update_state()

Valgrind:

==4173== 288 bytes in 2 blocks are definitely lost in loss record 7,164 of 7,660
==4173==    at 0x4C2DB8F: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==4173==    by 0x712B6A8: g_malloc (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4800.0)
==4173==    by 0x71428B2: g_slice_alloc (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4800.0)
==4173==    by 0x715D772: g_variant_builder_new (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4800.0)
==4173==    by 0x41847D: server_connected_changed_cb (vino-dbus-listener.c:221)
==4173==    by 0x6546FA4: g_closure_invoke (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x6558FC0: signal_emit_unlocked_R (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x6561D5B: g_signal_emit_valist (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x656208E: g_signal_emit (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x654B4D3: g_object_dispatch_properties_changed (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x654D960: g_object_notify (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4173==    by 0x41155D: vino_server_client_disconnected (vino-server.c:338)

==4583== 54 bytes in 2 blocks are definitely lost in loss record 4,586 of 7,726
==4583==    at 0x4C2DB8F: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
==4583==    by 0x712B6A8: g_malloc (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4800.0)
==4583==    by 0x714447E: g_strdup (in /lib/x86_64-linux-gnu/libglib-2.0.so.0.4800.0)
==4583==    by 0x4167CD: vino_status_icon_update_state (vino-status-icon.c:97)
==4583==    by 0x417A06: vino_status_icon_add_client (vino-status-icon.c:503)
==4583==    by 0x4114A8: vino_server_client_accepted (vino-server.c:306)
==4583==    by 0x411E4A: vino_server_handle_prompt_response (vino-server.c:564)
==4583==    by 0x43C925: vino_marshal_VOID__POINTER_ENUM (vino-marshal.c:93)
==4583==    by 0x6546FA4: g_closure_invoke (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4583==    by 0x6558FC0: signal_emit_unlocked_R (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4583==    by 0x6561D5B: g_signal_emit_valist (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
==4583==    by 0x656208E: g_signal_emit (in /usr/lib/x86_64-linux-gnu/libgobject-2.0.so.0.4800.0)
Comment 1 David King 2016-08-19 16:23:58 UTC
Review of attachment 333560 [details] [review]:

Thanks for the patch, which I pushed to master as commit c0ef037eb7768feea53ba6fd2afb8f39cbc4bef8.