Fix two memory leaks

Unref builder in server_connected_changed_cb() and free tooltip in
vino_status_icon_update_state().

https://bugzilla.gnome.org/show_bug.cgi?id=770091